modified tests for changed notification logic