@@ -13,6 +13,7 @@ import greencity.dto.notification.NotificationShortDto;
 import greencity.dto.notification.ScheduledEmailMessage;
 import greencity.dto.order.PaymentSystemResponse;
 import greencity.dto.pageble.PageableAdvancedDto;
+import greencity.entity.order.Bag;
 import greencity.entity.order.Event;
 import greencity.enums.NotificationTrigger;
 import greencity.enums.NotificationType;
@@ -37,6 +38,9 @@ import greencity.repository.UserNotificationRepository;
 import greencity.repository.UserRepository;
 import greencity.repository.ViolationRepository;
 import greencity.service.ubs.OrderBagService;
+import java.util.Map;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.Future;
 import java.util.stream.Stream;
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.BeforeEach;
@@ -81,7 +85,6 @@ import static greencity.ModelUtils.TEST_NOTIFICATION_PARAMETER_SET;
 import static greencity.ModelUtils.TEST_NOTIFICATION_PARAMETER_SET2;
 import static greencity.ModelUtils.TEST_NOTIFICATION_TEMPLATE;
 import static greencity.ModelUtils.TEST_NOTIFICATION_TEMPLATE_2;
-import static greencity.ModelUtils.TEST_ORDER_2;
 import static greencity.ModelUtils.TEST_ORDER_3;
 import static greencity.ModelUtils.TEST_ORDER_4;
 import static greencity.ModelUtils.TEST_ORDER_5;
@@ -114,6 +117,7 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.lenient;
@@ -195,15 +199,15 @@ class NotificationServiceImplTest {
     @Mock
     private OrderBagService orderBagService;
 
+    @BeforeEach
+    public void setUp() {
+        fixedClock = Clock.fixed(LOCAL_DATE_TIME.toInstant(ZoneOffset.ofHours(0)), ZoneId.systemDefault());
+        lenient().doReturn(fixedClock.instant()).when(clock).instant();
+        lenient().doReturn(fixedClock.getZone()).when(clock).getZone();
+    }
+
     @Nested
     class ClockNotification {
-        @BeforeEach
-        public void setUp() {
-            fixedClock = Clock.fixed(LOCAL_DATE_TIME.toInstant(ZoneOffset.ofHours(0)), ZoneId.systemDefault());
-            lenient().doReturn(fixedClock.instant()).when(clock).instant();
-            lenient().doReturn(fixedClock.getZone()).when(clock).getZone();
-        }
-
         @Test
         void testNotifyUnpaidOrders() {
             List<Order> orders = List.of(
@@ -282,18 +286,61 @@ class NotificationServiceImplTest {
         }
 
         @Test
-        void testNotifyPaidOrder() {
-            when(userNotificationRepository.save(any())).thenReturn(TEST_USER_NOTIFICATION);
+        void testNotifyUnpaidOrdersWhenOrderDoesNotNeedNewNotification() {
+            Order order = Order.builder()
+                .id(1L)
+                .user(getUser())
+                .orderPaymentStatus(OrderPaymentStatus.UNPAID)
+                .orderDate(LocalDateTime.now(fixedClock).minusDays(2))
+                .build();
 
-            notificationService.notifyPaidOrder(TEST_ORDER_2);
+            when(orderRepository
+                .findAllByOrderStatusNotAndOrderPaymentStatus(OrderStatus.CANCELED, OrderPaymentStatus.UNPAID))
+                .thenReturn(List.of(order));
+            when(userNotificationRepository.findFirstByOrderIdAndNotificationTypeInOrderByNotificationTimeDesc(
+                order.getId(), NotificationType.UNPAID_ORDER))
+                .thenReturn(Optional.of(new UserNotification()));
 
-            verify(userNotificationRepository, times(1)).save(any());
+            notificationService.notifyUnpaidOrders();
 
+            verify(userNotificationRepository, never()).save(any());
+            verify(notificationParameterRepository, never()).saveAll(any());
+        }
+
+        @Test
+        void testNotifyUnpaidOrdersWhenPaymentLinkNotPresent() {
+            Map<Integer, Integer> amountOfBagsOrdered = new HashMap<>();
+            amountOfBagsOrdered.put(1, 2);
+            Order order = Order.builder()
+                .id(1L)
+                .user(getUser())
+                .orderPaymentStatus(OrderPaymentStatus.UNPAID)
+                .orderDate(LocalDateTime.now(fixedClock).minusDays(4))
+                .amountOfBagsOrdered(amountOfBagsOrdered)
+                .build();
+            Bag bag = Bag.builder()
+                .id(1)
+                .fullPrice(100L)
+                .build();
+
+            when(orderRepository.findAllByOrderStatusNotAndOrderPaymentStatus(
+                OrderStatus.CANCELED, OrderPaymentStatus.UNPAID))
+                .thenReturn(Collections.singletonList(order));
+            when(userNotificationRepository.findUserNotificationByOrderAndNotificationType(
+                order, NotificationType.UNPAID_ORDER))
+                .thenReturn(Optional.empty());
+            when(orderBagService.findAllBagsByOrderId(1L)).thenReturn(Collections.singletonList(bag));
+
+            notificationService.notifyUnpaidOrders();
+
+            verify(userNotificationRepository, never()).save(any());
+            verify(userNotificationRepository).findUserNotificationByOrderAndNotificationType(
+                order, NotificationType.UNPAID_ORDER);
         }
 
         @Test
         @SneakyThrows
-        void notifyPaidOrder() {
+        void testNotifyPaidOrder() {
             Order order = Order.builder().id(1L).build();
             NotificationParameter orderNumber = NotificationParameter.builder()
                 .key("orderNumber")
@@ -310,22 +357,36 @@ class NotificationServiceImplTest {
         }
 
         @Test
-        void notifyUnpaidOrderPermanentlyTest() {
-            Double amountToPay = 10000.0;
+        void testNotifyUnpaidOrderPermanently() {
+            long amountToPay = 10000L;
 
             when(mockOrder.getOrderPaymentStatus()).thenReturn(OrderPaymentStatus.UNPAID);
             when(mockUserNotification.getOrder()).thenReturn(mockOrder);
             when(userNotificationRepository.save(any(UserNotification.class))).thenReturn(mockUserNotification);
-            when(notificationParameterRepository.saveAll(any())).thenAnswer(invocation -> {
-                return new ArrayList<>(invocation.getArgument(0));
-            });
+            when(notificationParameterRepository.saveAll(any())).thenAnswer(
+                invocation -> new ArrayList<>(invocation.getArgument(0)));
 
             assertDoesNotThrow(() -> notificationService.notifyUnpaidOrderPermanently(mockUserNotification.getOrder(),
-                amountToPay.longValue(), PaymentSystemResponse.builder()
+                amountToPay, PaymentSystemResponse.builder()
                     .orderId(1L).link(PAYMENT_LINK).build()));
 
             verify(userNotificationRepository).save(any(UserNotification.class));
             verify(notificationParameterRepository).saveAll(any());
+        }
+
+        @Test
+        void testNotifyUnpaidOrderPermanentlyWhenOrderIsPaid() {
+            long amountToPay = 10000L;
+            Order order = Order.builder()
+                .id(1L)
+                .orderPaymentStatus(OrderPaymentStatus.PAID)
+                .build();
+
+            notificationService.notifyUnpaidOrderPermanently(order, amountToPay,
+                PaymentSystemResponse.builder().link(PAYMENT_LINK).build());
+
+            verify(userNotificationRepository, never()).save(any());
+            verify(notificationParameterRepository, never()).saveAll(any());
         }
 
         @Test
@@ -411,6 +472,16 @@ class NotificationServiceImplTest {
         }
 
         @Test
+        void testNotifyBonusesWhenOverpaymentZero() {
+            Order order = Order.builder().id(1L).build();
+
+            notificationService.notifyBonuses(order, 0L);
+
+            verify(userNotificationRepository, never()).save(any());
+            verify(notificationParameterRepository, never()).saveAll(any());
+        }
+
+        @Test
         void testNotifyBonusesFromCanceledOrder() {
             when(userNotificationRepository.save(TEST_USER_NOTIFICATION_5)).thenReturn(TEST_USER_NOTIFICATION_5);
 
@@ -425,6 +496,20 @@ class NotificationServiceImplTest {
             verify(userNotificationRepository).save(any());
             verify(notificationParameterRepository).saveAll(TEST_NOTIFICATION_PARAMETER_SET2);
 
+        }
+
+        @Test
+        void testNotifyBonusesFromCanceledOrderWhenPointsToReturnZero() {
+            // Covers line 436: when pointsToReturn is null or 0
+            Order order = Order.builder()
+                .id(1L)
+                .pointsToUse(0)
+                .build();
+
+            notificationService.notifyBonusesFromCanceledOrder(order);
+
+            verify(userNotificationRepository, never()).save(any());
+            verify(notificationParameterRepository, never()).saveAll(any());
         }
 
         @Test
@@ -452,7 +537,7 @@ class NotificationServiceImplTest {
         }
 
         @Test
-        void TestNotifyChangedViolation() {
+        void testNotifyChangedViolation() {
             Set<NotificationParameter> parameters = new HashSet<>();
             parameters.add(NotificationParameter.builder()
                 .key("orderNumber")
@@ -470,7 +555,7 @@ class NotificationServiceImplTest {
         }
 
         @Test
-        void TestNotifyDeleteViolation() {
+        void testNotifyDeleteViolation() {
             Set<NotificationParameter> parameters = new HashSet<>();
             parameters.add(NotificationParameter.builder()
                 .key("orderNumber")
@@ -801,14 +886,14 @@ class NotificationServiceImplTest {
             return parameters;
         }
 
-        private void mockUserNeedNotificationCheck(Order order,NotificationType notificationType){
+        private void mockUserNeedNotificationCheck(Order order, NotificationType notificationType) {
             when(userNotificationRepository
                 .findFirstByOrderIdAndNotificationTypeInOrderByNotificationTimeDesc(order.getId(),
                     notificationType)).thenReturn(Optional.empty());
         }
 
         private void mockFillAndSendNotification(Set<NotificationParameter> parameters, Order order,
-            NotificationType notificationType) {
+                                                 NotificationType notificationType) {
             UserNotification userNotification = new UserNotification();
             userNotification.setNotificationType(notificationType);
             userNotification.setUser(order.getUser());
@@ -883,25 +968,37 @@ class NotificationServiceImplTest {
         }
 
         @Test
+        void testNotifyInactiveAccountsWhenExecutionException() throws Exception {
+            when(executorService.invokeAll(any())).thenReturn(List.of(mock(Future.class)));
+            when(executorService.invokeAll(any()).get(0).get())
+                .thenThrow(new ExecutionException("Test exception", null));
+
+            assertDoesNotThrow(() -> notificationService.notifyInactiveAccounts());
+
+            verify(executorService, times(2)).invokeAll(any());
+            verify(userNotificationRepository, never()).save(any());
+        }
+
+        @Test
         void testNotifyAllHalfPaidPackages() {
             User user = getUser();
             List<Order> orders = List.of(Order.builder().id(47L).user(user)
-                .orderDate(LocalDateTime.now(fixedClock))
-                .orderPaymentStatus(OrderPaymentStatus.HALF_PAID)
-                .payment(Collections.emptyList())
-                .certificates(Collections.emptySet())
-                .amountOfBagsOrdered(Collections.singletonMap(1, 3))
-                .exportedQuantity(Collections.emptyMap())
-                .confirmedQuantity(Collections.singletonMap(1, 3))
-                .pointsToUse(50)
-                .payment(List.of(
-                    Payment.builder()
-                        .paymentStatus(PaymentStatus.PAID).amount(5000L)
-                        .build(),
-                    Payment.builder()
-                        .paymentStatus(PaymentStatus.UNPAID).amount(0L)
-                        .build()))
-                .build(),
+                    .orderDate(LocalDateTime.now(fixedClock))
+                    .orderPaymentStatus(OrderPaymentStatus.HALF_PAID)
+                    .payment(Collections.emptyList())
+                    .certificates(Collections.emptySet())
+                    .amountOfBagsOrdered(Collections.singletonMap(1, 3))
+                    .exportedQuantity(Collections.emptyMap())
+                    .confirmedQuantity(Collections.singletonMap(1, 3))
+                    .pointsToUse(50)
+                    .payment(List.of(
+                        Payment.builder()
+                            .paymentStatus(PaymentStatus.PAID).amount(5000L)
+                            .build(),
+                        Payment.builder()
+                            .paymentStatus(PaymentStatus.UNPAID).amount(0L)
+                            .build()))
+                    .build(),
                 Order.builder().id(53L).user(user)
                     .orderDate(LocalDateTime.now(fixedClock))
                     .orderPaymentStatus(OrderPaymentStatus.HALF_PAID)
@@ -1130,7 +1227,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void getUnreadNotificationsTest() {
+    void testGetUnreadNotifications() {
         assertEquals(0, notificationService.getUnreadNotifications("Test"));
     }
 
@@ -1171,7 +1268,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void getNotificationMarksAsReadWhenMarkAsReadTrueTest() {
+    void testGetNotificationMarksAsReadWhenMarkAsReadTrue() {
         UserNotification notification = createUserNotificationForViolationWithParameters();
         notification.getUser().setUuid("abc");
         notification.setRead(false);
@@ -1191,7 +1288,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void getNotificationDoesNotMarkAsReadWhenMarkAsReadFalseTest() {
+    void testGetNotificationDoesNotMarkAsReadWhenMarkAsReadFalse() {
         UserNotification notification = createUserNotificationForViolationWithParameters();
         notification.getUser().setUuid("abc");
         notification.setRead(false);
@@ -1210,7 +1307,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void getNotificationMarksAsReadThroughEndpointTest() {
+    void testGetNotificationMarksAsReadThroughEndpoint() {
         UserNotification notification = createUserNotificationForViolationWithParameters();
         notification.getUser().setUuid("abc");
         notification.setRead(false);
@@ -1231,7 +1328,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void getNotificationDoesNotSaveWhenAlreadyReadAndMarkAsReadTrueTest() {
+    void testGetNotificationDoesNotSaveWhenAlreadyReadAndMarkAsReadTrue() {
         UserNotification notification = createUserNotificationForViolationWithParameters();
         notification.getUser().setUuid("abc");
         notification.setRead(true);
@@ -1250,7 +1347,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void getNotificationViolationNotFoundException() {
+    void testGetNotificationViolationNotFoundException() {
         UserNotification notification = createUserNotificationForViolationWithParameters();
         notification.getUser().setUuid("abc");
         when(userNotificationRepository.findById(1L)).thenReturn(Optional.of(notification));
@@ -1265,7 +1362,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void viewNotificationTest() {
+    void testViewNotification() {
         Long notificationId = TEST_NOTIFICATION_TEMPLATE.getId();
         Long userId = TEST_USER.getId();
 
@@ -1280,7 +1377,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void readNonExistentNotificationAndGetNotFoundExceptionTest() {
+    void testReadNonExistentNotificationAndGetNotFoundException() {
         Long notificationId = TEST_NOTIFICATION_TEMPLATE.getId();
         Long userId = TEST_USER.getId();
 
@@ -1299,7 +1396,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void unreadNotificationTest() {
+    void testUnreadNotification() {
         Long notificationId = TEST_NOTIFICATION_TEMPLATE.getId();
         Long userId = TEST_USER.getId();
 
@@ -1314,7 +1411,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void unreadNonExistentNotificationAndGetNotFoundExceptionTest() {
+    void testUnreadNonExistentNotificationAndGetNotFoundException() {
         Long notificationId = TEST_NOTIFICATION_TEMPLATE.getId();
         Long userId = TEST_USER.getId();
 
@@ -1333,7 +1430,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void deleteNotificationTest() {
+    void testDeleteNotification() {
         Long notificationId = TEST_NOTIFICATION_TEMPLATE.getId();
         Long userId = TEST_USER.getId();
 
@@ -1348,7 +1445,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void deleteNonExistentNotificationAndGetNotFoundExceptionTest() {
+    void testDeleteNonExistentNotificationAndGetNotFoundException() {
         Long notificationId = TEST_NOTIFICATION_TEMPLATE.getId();
         Long userId = TEST_USER.getId();
 
@@ -1376,14 +1473,13 @@ class NotificationServiceImplTest {
         order.setPayment(TEST_PAYMENT_LIST);
         order.setPointsToUse(0);
         order.setCertificates(Collections.emptySet());
-        Set<NotificationParameter> parameters = new HashSet<>();
         UserNotification notification = new UserNotification();
         notification.setNotificationType(NotificationType.ORDER_STATUS_CHANGED);
         notification.setUser(user);
         notification.setOrder(order);
 
         when(userNotificationRepository.save(any())).thenReturn(notification);
-        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(parameters));
+        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(new HashSet<>()));
         when(orderBagService.findAllBagsByOrderId(any())).thenReturn(getBag4list());
         notificationService.notifyUnpaidOrder(order, PAYMENT_LINK);
 
@@ -1405,7 +1501,6 @@ class NotificationServiceImplTest {
         order.setPayment(TEST_PAYMENT_LIST);
         order.setPointsToUse(0);
         order.setCertificates(Collections.emptySet());
-        Set<NotificationParameter> parameters = new HashSet<>();
 
         UserNotification notification = new UserNotification();
         notification.setNotificationType(NotificationType.DONE_OR_CANCELED_UNPAID_ORDER);
@@ -1413,7 +1508,7 @@ class NotificationServiceImplTest {
         notification.setOrder(order);
 
         when(userNotificationRepository.save(any())).thenReturn(notification);
-        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(parameters));
+        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(new HashSet<>()));
         when(orderBagService.findAllBagsByOrderId(any())).thenReturn(getBag4list());
         notificationService.notifyUnpaidOrder(order, PAYMENT_LINK);
 
@@ -1436,7 +1531,6 @@ class NotificationServiceImplTest {
         order.setPayment(TEST_PAYMENT_LIST);
         order.setPointsToUse(0);
         order.setCertificates(Collections.emptySet());
-        Set<NotificationParameter> parameters = new HashSet<>();
 
         UserNotification notification = new UserNotification();
         notification.setNotificationType(NotificationType.DONE_OR_CANCELED_UNPAID_ORDER);
@@ -1444,7 +1538,7 @@ class NotificationServiceImplTest {
         notification.setOrder(order);
 
         when(userNotificationRepository.save(any())).thenReturn(notification);
-        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(parameters));
+        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(new HashSet<>()));
         when(orderBagService.findAllBagsByOrderId(any())).thenReturn(getBag4list());
 
         notificationService.notifyUnpaidOrder(order, PAYMENT_LINK);
@@ -1467,7 +1561,6 @@ class NotificationServiceImplTest {
         order.setPayment(TEST_PAYMENT_LIST);
         order.setPointsToUse(0);
         order.setCertificates(Collections.emptySet());
-        Set<NotificationParameter> parameters = new HashSet<>();
 
         UserNotification notification = new UserNotification();
         notification.setNotificationType(NotificationType.DONE_OR_CANCELED_UNPAID_ORDER);
@@ -1475,7 +1568,7 @@ class NotificationServiceImplTest {
         notification.setOrder(order);
 
         when(userNotificationRepository.save(any())).thenReturn(notification);
-        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(parameters));
+        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(new HashSet<>()));
         when(orderBagService.findAllBagsByOrderId(any())).thenReturn(getBag4list());
 
         notificationService.notifyHalfPaidPackage(order);
@@ -1494,7 +1587,6 @@ class NotificationServiceImplTest {
         order.setPayment(TEST_PAYMENT_LIST);
         order.setPointsToUse(0);
         order.setCertificates(Collections.emptySet());
-        Set<NotificationParameter> parameters = new HashSet<>();
 
         UserNotification notification = new UserNotification();
         notification.setNotificationType(NotificationType.ORDER_STATUS_CHANGED);
@@ -1502,7 +1594,7 @@ class NotificationServiceImplTest {
         notification.setOrder(order);
 
         when(userNotificationRepository.save(any())).thenReturn(notification);
-        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(parameters));
+        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(new HashSet<>()));
         when(orderBagService.findAllBagsByOrderId(any())).thenReturn(getBag4list());
 
         notificationService.notifyHalfPaidPackage(order);
@@ -1512,7 +1604,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void createNotificationDtoTitleUaLanguageTest() {
+    void testCreateNotificationDtoTitleUaLanguage() {
         String language = "ua";
 
         when(templateRepository.findNotificationTemplateByNotificationTypeAndNotificationReceiverType(any(), any()))
@@ -1525,7 +1617,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void createNotificationDtoTitleEnLanguageTest() {
+    void testCreateNotificationDtoTitleEnLanguage() {
         String language = "en";
 
         when(templateRepository.findNotificationTemplateByNotificationTypeAndNotificationReceiverType(any(), any()))
@@ -1538,16 +1630,19 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void createNotificationDtoOfCustomTemplateTest() {
+    void testCreateNotificationDtoOfCustomTemplate() {
         String language = "en";
 
-        var testNotificationTemplate = TEST_NOTIFICATION_TEMPLATE;
+        var testNotificationTemplate = ModelUtils.createNotificationTemplate();
         testNotificationTemplate.setNotificationType(NotificationType.CUSTOM);
         testNotificationTemplate.setTrigger(NotificationTrigger.CUSTOM);
 
-        var testUserNotification = TEST_USER_NOTIFICATION;
-        testUserNotification.setNotificationType(NotificationType.CUSTOM);
-        testUserNotification.setTemplateId(testNotificationTemplate.getId());
+        var testUserNotification = UserNotification.builder()
+            .notificationType(NotificationType.CUSTOM)
+            .user(TEST_USER_NOTIFICATION.getUser())
+            .order(TEST_USER_NOTIFICATION.getOrder())
+            .templateId(testNotificationTemplate.getId())
+            .build();
 
         when(templateRepository.findNotificationTemplateByIdAndNotificationReceiverType(any(), any()))
             .thenReturn(Optional.of(testNotificationTemplate));
@@ -1560,7 +1655,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void notifySelfPickupOrderTest() {
+    void testNotifySelfPickupOrder() {
         User user = getUser();
         Long orderId = 2L;
         Order order = Order.builder()
@@ -1587,7 +1682,27 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void notifyCreateNewOrderTest() {
+    void testNotifyAllHalfPaidPackagesWhenHalfPaidPackageDoesNotNeedNotification() {
+        Order order = Order.builder()
+            .id(1L)
+            .orderPaymentStatus(OrderPaymentStatus.HALF_PAID)
+            .orderDate(LocalDateTime.now(fixedClock).minusMonths(2))
+            .build();
+
+        when(orderRepository.findAllByOrderPaymentStatus(OrderPaymentStatus.HALF_PAID))
+            .thenReturn(List.of(order));
+        when(userNotificationRepository.findFirstByOrderIdAndNotificationTypeInOrderByNotificationTimeDesc(
+            eq(order.getId()), any(NotificationType.class), any(NotificationType.class), any(NotificationType.class)))
+            .thenReturn(Optional.empty());
+
+        notificationService.notifyAllHalfPaidPackages();
+
+        verify(userNotificationRepository, never()).save(any());
+        verify(notificationParameterRepository, never()).saveAll(any());
+    }
+
+    @Test
+    void testNotifyCreateNewOrder() {
         User user = getUser();
         Order newOrder = ModelUtils.getOrder();
         newOrder.setSumTotalAmountWithoutDiscounts(100L);
@@ -1596,9 +1711,9 @@ class NotificationServiceImplTest {
         notification.setUser(user);
         notification.setOrder(newOrder);
         Set<NotificationParameter> parameters = Set.of(NotificationParameter.builder()
-            .key(ORDER_NUMBER_KEY)
-            .value(newOrder.getId().toString())
-            .build(),
+                .key(ORDER_NUMBER_KEY)
+                .value(newOrder.getId().toString())
+                .build(),
             NotificationParameter.builder()
                 .key(AMOUNT_TO_PAY_KEY)
                 .value(String.valueOf(newOrder.getSumTotalAmountWithoutDiscounts() / 100))
@@ -1618,7 +1733,7 @@ class NotificationServiceImplTest {
     }
 
     @Test
-    void notifyManagerWithNewGreenOfficeRequestFromTelegramBotTest() {
+    void testNotifyManagerWithNewGreenOfficeRequestFromTelegramBot() {
         ScheduledEmailMessage notification = ScheduledEmailMessage
             .builder()
             .username(USERNAME)
@@ -1632,6 +1747,28 @@ class NotificationServiceImplTest {
         notificationService.notifyManagerWithNewGreenOfficeRequestFromTelegramBot(USER_EMAIL, USERNAME);
 
         verify(userRemoteClient, times(1)).sendGreenOfficeRequestNotification(notification);
+    }
+
+    @Test
+    void testNotifyCanceledOrder() {
+        User user = getUser();
+        Order order = Order.builder()
+            .id(1L)
+            .user(user)
+            .sumTotalAmountWithoutDiscounts(10000L)
+            .build();
+        UserNotification notification = new UserNotification();
+        notification.setNotificationType(NotificationType.CANCELED_ORDER);
+        notification.setUser(user);
+        notification.setOrder(order);
+
+        when(userNotificationRepository.save(any())).thenReturn(notification);
+        when(notificationParameterRepository.saveAll(any())).thenReturn(new ArrayList<>(new HashSet<>()));
+
+        notificationService.notifyCanceledOrder(order);
+
+        verify(userNotificationRepository).save(any());
+        verify(notificationParameterRepository).saveAll(any());
     }
 
     @Test
